--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,113 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{pokhrel2021seroprevalence,
+  title={Seroprevalence and clinical features of scrub typhus among febrile patients attending a referral hospital in Kathmandu, Nepal},
+  author={Pokhrel, Anil and Rayamajhee, Binod and Khadka, Saroj and Thapa, Sandeep and Kapali, Samjhana and Pun, Sher Bahadur and Banjara, Megha Raj and Joshi, Prakash and Lekhak, Binod and Rijal, Komal Raj},
+  journal={Tropical medicine and infectious disease},
+  volume={6},
+  number={2},
+  pages={78},
+  year={2021},
+  publisher={MDPI}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{rayamajhee2021well,
+  title={How well the government of Nepal is responding to COVID-19? An experience from a resource-limited country to confront unprecedented pandemic},
+  author={Rayamajhee, Binod and Pokhrel, Anil and Syangtan, Gopiram and Khadka, Saroj and Lama, Bhupendra and Rawal, Lal Bahadur and Mehata, Suresh and Mishra, Shyam Kumar and Pokhrel, Roshan and Yadav, Uday Narayan},
+  journal={Frontiers in public health},
+  volume={9},
+  pages={597808},
+  year={2021},
+  publisher={Frontiers Media SA}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{khadka2021antimicrobial,
+  title={Antimicrobial resistance in Salmonella Typhi isolated from a referral Hospital of Kathmandu, Nepal},
+  author={Khadka, Saroj and Shrestha, Basudha and Pokhrel, Anil and Khadka, Sachin and Joshi, Rajesh Dhoj and Banjara, Megha Raj},
+  journal={Microbiology insights},
+  volume={14},
+  pages={11786361211056350},
+  year={2021},
+  publisher={SAGE Publications Sage UK: London, England}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{khadka2023urine,
+  title={Urine-mediated suppression of Klebsiella pneumoniae mucoidy is counteracted by spontaneous Wzc variants altering capsule chain length},
+  author={Khadka, Saroj and Ring, Brooke E and Walker, Ryan S and Krzeminski, Lindsey R and Pariseau, Drew A and Hathaway, Matthew and Mobley, Harry LT and Mike, Laura A},
+  journal={Msphere},
+  volume={8},
+  number={5},
+  pages={e00288--23},
+  year={2023},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{ring2023genetic,
+  title={Genetic manipulation of Klebsiella pneumoniae},
+  author={Ring, Brooke E and Khadka, Saroj and Pariseau, Drew A and Mike, Laura A},
+  journal={Current protocols},
+  volume={3},
+  number={10},
+  pages={e912},
+  year={2023}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{khadka2023characterization,
+  title={Characterization of Klebsiella pneumoniae extracellular polysaccharides},
+  author={Khadka, Saroj and Ring, Brooke E and Pariseau, Drew A and Mike, Laura A},
+  journal={Current protocols},
+  volume={3},
+  number={11},
+  pages={e937},
+  year={2023}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{pariseau2024cultivation,
+  title={Cultivation and genomic DNA extraction of Klebsiella pneumoniae},
+  author={Pariseau, Drew A and Ring, Brooke E and Khadka, Saroj and Mike, Laura A},
+  journal={Current protocols},
+  volume={4},
+  number={1},
+  pages={e932},
+  year={2024}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{khadka2025mechanisms,
+  title={Mechanisms governing bacterial capsular polysaccharide attachment and chain length},
+  author={Khadka, Saroj and Kinney, Emily L and Ryan, Brooke E and Mike, Laura A},
+  journal={Annals of the New York Academy of Sciences},
+  volume={1548},
+  number={1},
+  pages={80--98},
+  year={2025}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{ryan2025arginine,
+  title={Arginine regulates the mucoid phenotype of hypervirulent Klebsiella pneumoniae},
+  author={Ryan, Brooke E and Holmes, Caitlyn L and Stark, Drew J and Shepard, Grace E and Mills, Emma G and Khadka, Saroj and Van Tyne, Daria and Bachman, Michael A and Mike, Laura A},
+  journal={Nature Communications},
+  volume={16},
+  number={1},
+  pages={5875},
+  year={2025},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{kinney2025connections,
+  title={Connections between Klebsiella pneumoniae Bloodstream Dynamics and Serotype-Independent Capsule Properties},
+  author={Kinney, Emily L and Stark, Drew J and Khadka, Saroj and Bain, William and Mike, Laura A},
+  journal={bioRxiv},
+  pages={2025--08},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{khadka2025sugar,
+  title={Sugar Import Suppresses Klebsiella pneumoniae Mucoidy in cAMP-CRP-dependent Manner},
+  author={Khadka, Saroj and Gates, Gabriella and Stark, Drew J and Allison, Bennett and Mike, Laura A},
+  journal={bioRxiv},
+  pages={2025--11},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory}
 }
