--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,6 +31,7 @@
   volume={14},
   pages={11786361211056350},
   year={2021},
+  selected={true},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -42,6 +43,7 @@
   number={5},
   pages={e00288--23},
   year={2023},
+  selected={true},
   publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
 
@@ -93,6 +95,7 @@
   number={1},
   pages={5875},
   year={2025},
+  selected={true},
   publisher={Nature Publishing Group UK London}
 }
 
@@ -111,5 +114,6 @@
   journal={bioRxiv},
   pages={2025--11},
   year={2025},
+  selected={true},
   publisher={Cold Spring Harbor Laboratory}
 }
